<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    style="@style/ScreenBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="vertical"
        android:gravity="center">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:cardCornerRadius="150dp">
            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="centerInside"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/signinpic" />
        </androidx.cardview.widget.CardView>



        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"

            android:fontFamily="Robo"
            android:text="@string/signinpage1"
            android:textSize="28sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView3"
            style="@style/TextColor"/>

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="Robo"
            android:text="@string/signinpage2"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView12"
            style="@style/TextColor"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/cutlery"
                style="@style/ImageColor"/>

            <EditText
                android:id="@+id/emailText"
                android:layout_width="286dp"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/custom_edit_text"
                android:ems="9"
                android:hint="@string/signinpage3"
                android:inputType="textEmailAddress" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/baseline_lock_24"
                android:layout_marginTop="20dp"
                android:layout_marginRight="10dp"
                style="@style/ImageColor"/>

            <EditText
                android:id="@+id/passwordText"
                android:layout_width="286dp"
                android:layout_height="50dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/custom_edit_text"
                android:ems="9"
                android:hint="@string/signinpage4"
                android:inputType="textPassword" />
        </LinearLayout>


        <Button
            android:id="@+id/loginButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/custom_button"
            android:ems="18"
            android:onClick="loginClicked"
            android:text="@string/signinpage5"
            android:textColor="@color/white"
            android:textSize="16dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:fontFamily="roboto"
                android:text="@string/signinpage6"
                android:textSize="12sp"
                style="@style/TextColor"/>

            <Button
                android:id="@+id/toSignUpButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:background="@android:color/transparent"
                android:minWidth="0dp"
                android:minHeight="0dp"
                android:onClick="toSignUpClick"
                android:text="@string/siginpage7"
                android:textColor="@color/primaryColor"
                android:textSize="12sp" />

        </LinearLayout>


    </LinearLayout>
</ScrollView>