<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity"
    style="@style/ScreenBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:cardCornerRadius="150dp">
            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="centerInside"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/signinpic" />
        </androidx.cardview.widget.CardView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signuppage1"
            android:fontFamily="Robo"
            android:textSize="28sp"
            android:textStyle="bold"
            android:layout_margin="15dp"
            style="@style/TextColor"
            />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/nav_profile"
                style="@style/ImageColor"/>

            <EditText
                android:id="@+id/nameText"
                android:layout_width="286dp"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/custom_edit_text"
                android:ems="9"
                android:hint="@string/signuppage2"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/baseline_email_24"
                style="@style/ImageColor"/>

            <EditText
                android:id="@+id/mailText"
                android:layout_width="286dp"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/custom_edit_text"
                android:ems="9"
                android:hint="@string/signuppage3"
                android:inputType="textEmailAddress" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/baseline_lock_24"
                style="@style/ImageColor"/>

            <EditText
                android:id="@+id/passwordText"
                android:layout_width="286dp"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/custom_edit_text"
                android:ems="9"
                android:hint="@string/signuppage4"
                android:inputType="textPassword" />
        </LinearLayout>

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Erkek"
                android:layout_marginEnd="20dp"/>

            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Kadın" />
        </RadioGroup>

        <Button
            android:id="@+id/loginButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/custom_button"
            android:ems="18"
            android:onClick="signUpClick"
            android:text="@string/signuppage5"
            android:textColor="@color/white"
            android:textSize="16dp" />

        <LinearLayout
            android:id="@+id/signUpClick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:fontFamily="roboto"
                android:text="@string/signuppage6"
                android:textSize="12sp"
                style="@style/TextColor"/>

            <Button
                android:id="@+id/toSignUpButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:background="@android:color/transparent"
                android:minWidth="0dp"
                android:minHeight="0dp"
                android:onClick="toLogInClick"
                android:text="@string/signuppage7"
                android:textColor="@color/primaryColor"
                android:textSize="12sp" />

        </LinearLayout>



    </LinearLayout>




</ScrollView>